Settle the collector question: the pauses are 3%, the pages are the difference
.todo/498 was filed on the README recording two contradictory rows -- the
default collector faster at the notebook's width, -XX:+UseParallelGC -Xmn8g
faster at the book's shapes -- with the hypothesis that G1 answers the
residency's System.gc() with an expensive full collection of a 64 GB heap.
Both -Xlog:gc logs, taken at HEAD, say otherwise:

- A G1 full collection and a ParallelGC one cost the same ~50 ms here, because
  what a full collection walks is the live set and result stubs made that
  143 MB. The two collectors' TOTAL pause time over the same 103-step
  book-shape run is 2.83 s against 2.71 -- 3% of the run either way, so the
  20 s between them is not collection work at all.
- What the full collection costs is the PAGES. -Xms8g alone, which only stops
  G1 uncommitting (the log shows the heap dropping 8.1 GB -> 1.5 GB at each
  full collection and growing back), recovers 8 of the 20 s;
  -XX:+ExplicitGCInvokesConcurrent, which never compacts, recovers all of it
  while RAISING the number of requests from 24 to 97 and lowering pause time
  to 1.8 s. A compacting collection moves every live array to a new address
  and hands the regrown heap fresh pages, and a device copy to or from a page
  the GPU has not touched costs ~9 us per 4 KB (todo-474).
- The notebook's width says the same with no collection at all:
  -XX:+UseParallelGC -Xmn4g collects ONCE in a 200-step run, for 10 ms, and is
  still 3 s slower than the default collector -- and -XX:+AlwaysPreTouch,
  which warms those pages from the CPU, takes that same configuration from
  8.40 s to 6.46 without changing a single collection.

No flag wins at both shapes. Over the notebook's own 5000 steps the concurrent
answer has less than half the pause time and is five minutes slower (72.2 min
against 67.2), because 6730 concurrent cycles are eight minutes of background
threads competing with the one thread that feeds the device